[gd_scene load_steps=6 format=3 uid="uid://cp8kja0sx5u7a"]

[ext_resource type="Script" path="res://assets/Scripts/DevTools/TagEditor/tag_edit_container.gd" id="1_8i8wl"]
[ext_resource type="Texture2D" uid="uid://io35wpu802fp" path="res://assets/Sprites/UI/BackPatches/Patch_64_12.png" id="2_7corr"]
[ext_resource type="Texture2D" uid="uid://s8s7rktavc7e" path="res://assets/Sprites/UI/BackPatches/Patch_32_8.png" id="3_bns26"]
[ext_resource type="Script" path="res://assets/Scripts/DevTools/TagEditor/tag_edit_entry_container.gd" id="3_uu4md"]
[ext_resource type="Script" path="res://assets/Scripts/DevTools/self_scale_line_edit.gd" id="4_g2cgw"]

[node name="TagEditContainer" type="Container" node_paths=PackedStringArray("tag_entry_container", "tags_container", "background", "inner_container")]
custom_minimum_size = Vector2(105, 84)
offset_right = 105.0
offset_bottom = 84.0
script = ExtResource("1_8i8wl")
tag_entry_container = NodePath("InnerContainer/TagEditContainer")
tags_container = NodePath("InnerContainer/FlowContainer")
show_background = true
background = NodePath("Background")
inner_container = NodePath("InnerContainer")
margin_override = 6

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_7corr")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="InnerContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="InnerContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InnerContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Tags:"

[node name="AddButton" type="Button" parent="InnerContainer/TitleContainer"]
layout_mode = 2
text = "Add"

[node name="TagEditContainer" type="Container" parent="InnerContainer" node_paths=PackedStringArray("background", "inner_container")]
custom_minimum_size = Vector2(77, 33)
layout_mode = 2
script = ExtResource("3_uu4md")
background = NodePath("Background")
inner_container = NodePath("InnerContainer")
margin_override = 4

[node name="Background" type="NinePatchRect" parent="InnerContainer/TagEditContainer"]
layout_mode = 2
texture = ExtResource("3_bns26")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="InnerContainer" type="HBoxContainer" parent="InnerContainer/TagEditContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="InnerContainer/TagEditContainer/InnerContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "X"

[node name="SSLineEdit" type="LineEdit" parent="InnerContainer/TagEditContainer/InnerContainer" node_paths=PackedStringArray("hidden_text_edit")]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "Tag"
script = ExtResource("4_g2cgw")
hidden_text_edit = NodePath("../TextEdit")

[node name="TextEdit" type="TextEdit" parent="InnerContainer/TagEditContainer/InnerContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Som really long text"
scroll_fit_content_height = true

[node name="FlowContainer" type="FlowContainer" parent="InnerContainer"]
layout_mode = 2
